--- a/Sesion-02/Ejemplo-04/modificando_diccionarios.ipynb
+++ b/Sesion-02/Ejemplo-04/modificando_diccionarios.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,22 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'dir': {'calle': 'Pilares',\n",
-      "         'colonia': 'Del Valle Centro',\n",
-      "         'cp': '03100',\n",
-      "         'num': 69},\n",
-      " 'nombre': 'Isabel',\n",
-      " 'tel': 5546352431}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "info_de_contacto = {\n",
     "    \"nombre\": \"Isabel\",\n",
@@ -74,23 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'dir': {'calle': 'Pilares',\n",
-      "         'colonia': 'Del Valle Centro',\n",
-      "         'cp': '03100',\n",
-      "         'num': 69},\n",
-      " 'email': 'isabel.arriaga@gmail.com',\n",
-      " 'nombre': 'Isabel',\n",
-      " 'tel': 5546352431}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "info_de_contacto[\"email\"] = \"isabel.arriaga@gmail.com\"\n",
     "\n",
@@ -108,20 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'dir': {'calle': 'Progreso', 'colonia': 'Escandón', 'cp': '11800', 'num': 189},\n",
-      " 'email': 'isabel.arriaga@gmail.com',\n",
-      " 'nombre': 'Isabel',\n",
-      " 'tel': 5546352431}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "info_de_contacto[\"dir\"] = {\n",
     "        \"colonia\": \"Escandón\",\n",
@@ -142,20 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'dir': {'calle': 'Progreso', 'colonia': 'Escandón', 'cp': '11800', 'num': 289},\n",
-      " 'email': 'isabel.arriaga@gmail.com',\n",
-      " 'nombre': 'Isabel',\n",
-      " 'tel': 5546352431}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "info_de_contacto[\"dir\"][\"num\"] = 289\n",
     "\n",
@@ -173,19 +124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'dir': {'calle': 'Progreso', 'colonia': 'Escandón', 'cp': '11800', 'num': 289},\n",
-      " 'email': 'isabel.arriaga@gmail.com',\n",
-      " 'nombre': 'Isabel'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "info_de_contacto.pop(\"tel\")\n",
     "\n",
@@ -211,9 +152,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (data_science)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "data_science"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
