--- a/Sesion-02/Reto-05/funciones.ipynb
+++ b/Sesion-02/Reto-05/funciones.ipynb
@@ -100,24 +100,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<details><summary>Solución</summary>\n",
-    "\n",
-    "```python\n",
-    "def numero_es_par(numero):\n",
-    "    \n",
-    "    if numero % 2 == 0:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False\n",
-    "```\n",
-    "    \n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### b) Reutilización de código\n",
     "\n",
     "Debajo tenemos algo de código."
@@ -184,23 +166,6 @@
     "\n",
     "resultado_6 = \n",
     "print(f'')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details><summary>Solución</summary>\n",
-    "\n",
-    "```python\n",
-    "def sacar_porcentaje(muestra, total):\n",
-    "    return muestra * 100 / total\n",
-    "    \n",
-    "def crear_string_con_porcentaje_de_muestra_al_total(muestra, total, porcentaje):\n",
-    "    return f'{muestra} es el {porcentaje}% del número {total}'\n",
-    "```\n",
-    "    \n",
-    "</details>"
    ]
   },
   {
@@ -321,40 +286,13 @@
     "\n",
     "print(f'\\nErrores encontrados: {errores}')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details><summary>Solución</summary>\n",
-    "\n",
-    "```python\n",
-    "def nivel_de_acceso_para_username(base_de_datos, username,  nip_de_acceso):\n",
-    "    # Reto extra\n",
-    "    if username not in base_de_datos:\n",
-    "        return 0\n",
-    "    \n",
-    "    # Reto estandar\n",
-    "    if base_de_datos[username][\"rol\"] == \"admin\":\n",
-    "        return 1\n",
-    "    elif base_de_datos[username][\"rol\"] == \"lector\":\n",
-    "        return 2\n",
-    "    else:\n",
-    "        if base_de_datos[username][\"nip_de_acceso\"] == nip_de_acceso:\n",
-    "            return 1\n",
-    "        else:\n",
-    "            return 0\n",
-    "```\n",
-    "    \n",
-    "</details>"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (data_science)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "data_science"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
