--- a/Sesion-03/Ejemplo-01/map.ipynb
+++ b/Sesion-03/Ejemplo-01/map.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,20 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[10, 20, 30, 40, 50, 60, 70, 80, 90, 100]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list(map(multiplicar_por_10, numeros))"
    ]
@@ -93,20 +82,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[10, 20, 30, 40, 50, 60, 70, 80, 90, 100]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "numeros_por_10 = list(map(multiplicar_por_10, numeros))\n",
     "\n",
@@ -124,29 +102,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['1 seg',\n",
-       " '2 seg',\n",
-       " '3 seg',\n",
-       " '4 seg',\n",
-       " '5 seg',\n",
-       " '6 seg',\n",
-       " '7 seg',\n",
-       " '8 seg',\n",
-       " '9 seg',\n",
-       " '10 seg']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def convertir_en_string_mas_unidad(numero):\n",
     "    \n",
@@ -157,20 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-1, -2, -3, -4, -5, -6, -7, -8, -9, -10]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def convertir_a_numeros_negativos(numero):\n",
     "    \n",
@@ -181,20 +128,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 0, 0, 0, 5, 6, 7, 8, 9, 10]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def convertir_en_0_si_menor_a_5(numero):\n",
     "    \n",
@@ -208,27 +144,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[False, False, False, False, False, False, True, True, True, True]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def convertir_en_true_si_mayor_a_6(numero):\n",
-    "    \n",
-    "    if numero > 6:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False\n",
+    "\n",
+    "    return numero > 6\n",
     "    \n",
     "list(map(convertir_en_true_si_mayor_a_6, numeros))"
    ]
@@ -243,9 +165,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (data_science)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "data_science"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -257,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
