--- a/Sesion-03/Reto-01/map.ipynb
+++ b/Sesion-03/Reto-01/map.ipynb
@@ -67,41 +67,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Corre después la siguiente celda para obtener una representación en `string`. No importa si no entiendes por completo qué está pasando en la siguiente celda. Más adelante en el módulo aprenderemos a hacer esto y más."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Pega aquí la función de verificación\n",
-    "\n",
-    "imprimir_proporciones_en_equivalencia_a_porcentajes(proporciones, porcentajes)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details><summary>Solución</summary>\n",
-    "\n",
-    "```python\n",
-    "def proporcion_a_porcentajes(proporcion):\n",
-    "  \n",
-    "    return proporcion * 100\n",
-    "    \n",
-    "porcentajes = list(map(proporcion_a_porcentajes, proporciones)) \n",
-    "```\n",
-    "    \n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### b) Strings a números\n",
     "\n",
     "Tenemos una `lista` con strings que representan valores númericos:"
@@ -146,55 +111,13 @@
    "source": [
     "numeros_como_ints ="
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pídele a tu experta la función de verificación `imprimir_analisis_estadistico` (encontrada en el archivo `helpers.py` de la carpeta donde se encuentra este Reto), pégala debajo y corre la celda para verificar tu resultado:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Pega aquí la función de verificación\n",
-    "\n",
-    "imprimir_analisis_estadistico(numeros_como_ints)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details><summary>Solución</summary>\n",
-    "\n",
-    "```python\n",
-    "def string_a_int(string):\n",
-    "    \n",
-    "    return int(string)\n",
-    "    \n",
-    "numeros_como_ints = list(map(string_a_int, numeros_como_strings))\n",
-    "```\n",
-    "    \n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (data_science)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "data_science"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -206,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
