--- a/Sesion-03/Reto-02/filter.ipynb
+++ b/Sesion-03/Reto-02/filter.ipynb
@@ -64,44 +64,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pídele a tu experta la función de verificación `crear_histograma_con` (encontrada en el archivo `helpers.py` de la carpeta donde se encuentra este Reto), pégala debajo y corre la celda para verificar tu resultado:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Pega aquí la función de verificación\n",
-    "\n",
-    "crear_histograma_con(edades_filtradas)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details><summary>Solución</summary>\n",
-    "\n",
-    "```python\n",
-    "def valor_no_es_none(valor):\n",
-    "    \n",
-    "    if valor == None:\n",
-    "        return False\n",
-    "    else:\n",
-    "        return True\n",
-    "    \n",
-    "edades_filtradas = list(filter(valor_no_es_none, edades))\n",
-    "```\n",
-    "    \n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### b) Filtrando datos atípicos\n",
     "\n",
     "Aquí tenemos una `lista` que contiene datos acerca de los sueldos (cada número representa \"miles de pesos\") de los empleados de EyePoker Inc. (la empresa donde se producen los mejores picadores de ojos en todo el Hemisferio Occidental):"
@@ -170,40 +132,13 @@
    "source": [
     "print(f'El sueldo \"típico\" en EyePoker Inc. es de {sum(sueldos_filtrados) / len(sueldos_filtrados)}')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details><summary>Solución</summary>\n",
-    "\n",
-    "```python\n",
-    "def numero_es_menor_que_40(numero):\n",
-    "    \n",
-    "    if numero < 40:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False\n",
-    "    \n",
-    "sueldos_filtrados = list(filter(numero_es_menor_que_40, sueldos))\n",
-    "```\n",
-    "    \n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (data_science)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "data_science"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -215,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
